--- a/templates/home.html
+++ b/templates/home.html
@@ -114,3 +114,17 @@
 </body>
 </html>
 {% endblock %}
+
+
+
+
+echo "# " >> README.md
+git init
+git add README.md
+git commit -m "commits"
+git branch -M main
+git remote add origin https://github.com/harizonelopez/quiz-app.git
+git pull -u origin main
+git push -u origin main
+
+
