Update page titles to "Take-quiz.com" across multiple templates and remove obsolete user database files.

--- a/templates/score.html
+++ b/templates/score.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} Score page {% endblock %}
+{% block title %} Take-quiz.com {% endblock %}
 
 {% block content %}
 <head>
