--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} 
-{% block title %} Contacts page {% endblock %}
+{% block title %} Take-quiz.com {% endblock %}
 
 {% block content %}
 <head>
