--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} 
-{% block title %} homepage{% endblock %}
+{% block title %} Take-quiz.com {% endblock %}
 
 {% block content %}
 <head>
