--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} Quiz page {% endblock %}
+{% block title %} Take-quiz.com {% endblock %}
 
 {% block content %}
 <head>
