--- a/templates/reference.html
+++ b/templates/reference.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} 
-{% block title %} Reference page {% endblock %}
+{% block title %} Take-quiz.com {% endblock %}
 
 {% block content %}
 <head>
