Fix placeholder text in username input field in signup.html

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -78,7 +78,7 @@
                         class="form-control"
                         id="username" 
                         name="username" required
-                        placeholder="Enter username here..">
+                        placeholder="Enter username here...">
                     <br>
                     <label for="password">Password:</label>
                     <input 
