--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,13 +7,13 @@
 
     <!-- Bootstrap 5 CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
-        rel="stylesheet">
+          rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/index-style.css') }}">
+    <link href="{{ url_for('static', filename='css/index-style.css') }}"
+          rel="stylesheet">
 </head>
 <body class="d-flex align-items-center justify-content-center vh-100 bg-light fade-in">
-
     <div class="card p-5 shadow-lg text-center welcome-card scale-up">
         <h1 class="mb-4 slide-down">Welcome to the Quiz App</h1>
         <p class="lead mb-4 slide-up">Test your knowledge with a series of fun and challenging questions!</p>
