Refactor: Update quiz questions and enhance quiz logic with randomized question order and improved user feedback

--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -27,7 +27,7 @@
                             {{ index }}/{{ total }}
                         </div>
                     </div>
-                    <span class="badge bg-info text-dark">Question {{ Qst }}</span>
+                    <span class="badge bg-info text-dark">Stage {{ stage }}</span>
                     <div id="timer" class="badge bg-warning text-dark">Time: <span id="countdown">20</span>s</div>
                 </div>
 
