Refactor: Implement leaderboard functionality with score tracking and display

--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -27,6 +27,7 @@
         {% endif %}
 
         <a href="{{ url_for('main.index') }}" class="btn btn-primary mt-4">Try Again</a> <!-- To be modified into an if else inconsideration of the scores later -->
+        <a href="{{ url_for('main.show_leaderboard') }}" class="btn btn-outline-secondary mt-3 ms-2">View Leaderboard</a>
     </div>
 
     <!-- Bootstrap JS -->
