updates for the results chart

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,7 +33,7 @@
                         type="text" 
                         name="username" 
                         class="form-control form-control-lg" 
-                        placeholder="   ----  enter your name ----" required>
+                        placeholder="   ----  Enter your name ----" required>
                 </div>
 
                 <button type="submit" class="btn btn-primary btn-lg">Start Quiz</button>
