--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -10,7 +10,8 @@
           rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/quiz-style.css') }}">
+    <link rel="stylesheet" 
+          href="{{ url_for('static', filename='css/quiz-style.css') }}">
 </head>
 <body class="bg-light">
     <div class="container py-5">
