--- a/app/templates/leaderboard.html
+++ b/app/templates/leaderboard.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Quiz Leaderboard</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+          rel="stylesheet">
 
     <!-- Chart.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
